1.登录界面写好了，现在注释掉了 2.正在写时间选择，样式还有很大的问题，暂时不知道怎么调整

--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs"
+  "pages": [
+    "pages/class/class"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "backgroundColor": "#f8f8f8",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "MiuYoga会员约课系统",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light"
   }
 }
